Minor api change for /api/{id}/reviews