@@ -1,31 +1,43 @@
 package org.example.service;
 
 import org.example.model.Product;
+import org.example.model.Review;
 import org.example.repository.ProductRepository;
+import org.example.repository.ReviewRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class ProductService {
-    private final ProductRepository repo;
 
-    public ProductService(ProductRepository repo) {
-        this.repo = repo;
+    private final ProductRepository productRepo;
+    private final ReviewRepository reviewRepo;
+
+    public ProductService(ProductRepository productRepo, ReviewRepository reviewRepo) {
+        this.productRepo = productRepo;
+        this.reviewRepo = reviewRepo;
     }
 
-    public List<Product> getAllProducts() {
-        return repo.findAll();
+    public Product getProductById(Long id) {
+        return productRepo.findById(id).orElse(null);
     }
 
-    public List<Product> getProductsByCategory(String category) {
-        return repo.findByCategory(category);
+    public List<Review> getReviewsByProductId(Long productId) {
+        return reviewRepo.findByProductId(productId);
     }
 
     public List<String> getAllCategories() {
-        return repo.findAll().stream()
+        return productRepo.findAll()
+                .stream()
                 .map(Product::getCategory)
                 .distinct()
-                .toList();
+                .collect(Collectors.toList());
     }
 }
+
+
+
+
+
